# SIL_KIT

./: BEGINNER_SILKIT_CRASH_COURSE.md  SIMPLECAN_GUIDED_WALKTHROUGH.md  SIMPLE_CPP_GUIDED_WALKTHROUGH.md
Domain_Body_TestCase/: Codebase_Study_Guide.tex  ReadMe_Bodydomain_feature_testbench.md
Domain_Body_TestCase/HPC_QEMU/: CMakeLists.txt  HPC.cpp
Domain_Body_TestCase/HPC_QEMU/config/: participantConfig.yaml
Domain_Body_TestCase/HPC_QEMU/scripts/: start_HPC.sh
Domain_Body_TestCase/Matlab_Mockup/: README.md  bus_push.m  bus_take_for.m  create_eth_frame.m  decode_vehicle_signals.m  encode_vehicle_signals.m  extract_eth_payload.m  hpc_step.m  init_bus.m  init_simulation.m  plant_model_step.m  run_mockup_demo.m  telematics_step.m  trunk_status_label.m  zonal_a_step.m  zonal_b_step.m
Domain_Body_TestCase/PlantModel_RestBus/: CMakeLists.txt  RestBus.cpp  temp.txt
Domain_Body_TestCase/PlantModel_RestBus/config/: participantConfig.yaml
Domain_Body_TestCase/PlantModel_RestBus/include/: Helper.hpp
Domain_Body_TestCase/PlantModel_RestBus/scripts/: first_build.sh  startTC1.sh  startTC2.sh  startTC3.sh
Domain_Body_TestCase/Simulink_Mockup/: README.md
Domain_Body_TestCase/Telematics_QEMU/: CMakeLists.txt  Telematic_ECU.cpp
Domain_Body_TestCase/Zonal_A/: CMakeLists.txt  ZonalA.cpp
Domain_Body_TestCase/Zonal_A/config/: participantConfig.yaml
Domain_Body_TestCase/Zonal_A/include/: Helper.hpp
Domain_Body_TestCase/Zonal_A/scripts/: start.sh
Domain_Body_TestCase/Zonal_B/: CMakeLists.txt
Domain_Body_TestCase/Zonal_B/config/: participantConfig.yaml
Domain_Body_TestCase/Zonal_B/scripts/: start.sh
Domain_Body_TestCase/Zonal_B/src/: ZonalB.cpp
Domain_Body_TestCase/log/: HPC.txt  Plant_model_tc1.txt  Plant_model_tc2.txt  Plant_model_tc3.txt  Telematics.txt  ZonalA.txt  ZonalB.txt
(+12 files in other folders)
